updated resume open in a new tab from portfolio

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
              <p>anything</p>
             <a href="images/Sujatha_Mallela_latest_Resume.docx" target="_blank"><i class="fa fa-envelope "></i>My Resume</a> -->
                 <!-- <div class='case'> -->
-                <a href="images/Sujatha_Mallela.pdf"> <button class="btn btn-light "><i
+                <a href="images/Sujatha_Mallela.pdf" target="_blank"> <button class="btn btn-light "><i
                             class="fa fa-cloud-download "></i>View Resume</button></a>
                 <!--                 
             </div> -->
