updated group project link based on corresponding changes made in master branch

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                 <!-- <h5 class="card-title">Group Project</h5>  -->
                                 <p><a target="_blank" href="https://github.com/Maxguojiaqi/GroupProject1"><i
                                             class="fa fa-github "></i> Repository Link</a></p>
-                                <p><a target="_blank" href="https://maxguojiaqi.github.io/GroupProject1"><i
+                                <p><a target="_blank" href="https://maxguojiaqi.github.io/Master-Home-Cook/"><i
                                             class="fa fa-globe "></i> Live Project</a>
                                 </p>
                             </div>
