Added BurgerApp to the portfolio

--- a/index.html
+++ b/index.html
@@ -106,8 +106,24 @@
             <div class="p-5 text-white" style="background-color:rgb(116, 28, 62)">
                 <h2>My Projects</h2>
                 <p></p>
-                <div class="row">
-                    <div class="col-md-4">
+                <div class="row justify-content-center">
+
+                    <div class="col-md-5">
+                        <div class="card mb-3 text-center">
+                            <img src="images/Burger.png" class="card-img-top" alt="day planner image">
+                            <div class="card-body text-primary">
+                                <h4 class="card-title">EatDaBurger</h4>
+                                <!-- <h5 class="card-title">Group Project</h5>  -->
+                                <p><a target="_blank" href="https://github.com/sujatha-m/EatDaBurger"><i
+                                            class="fa fa-github "></i> Repository Link</a></p>
+                                <p><a target="_blank" href="https://desolate-garden-68905.herokuapp.com/burgers"><i
+                                            class="fa fa-globe "></i> Live Project Heroku</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-5">
                         <div class="card mb-3 text-center">
                             <img src="images/MasterHomeCook.png" class="card-img-top" alt="day planner image">
                             <div class="card-body text-primary">
@@ -121,7 +137,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+
+                    <div class="col-md-5">
                         <div class="card mb-3 text-center">
                             <img src="images/WeatherDashBoard.png" class="card-img-top" alt="day planner image">
                             <div class="card-body text-primary">
@@ -134,7 +151,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+
+                    <div class="col-md-5">
                         <div class="card mb-3 text-center">
                             <img src="images/Dayplanner.png" class="card-img-top" alt="day planner image">
                             <div class="card-body text-primary">
